add functio of loggin user and set info to localStorage, add some info user for profile page

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
     "moduleResolution": "node",
     "outDir": "./dist",
     "sourceMap": true,
+    "resolveJsonModule": true,
   },
   "ts-node": {
     "compilerOptions": {
